fix hidden columns headers
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42073

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListChange/Templates/SalePriceListCodeChangeTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListChange/Templates/SalePriceListCodeChangeTemplate.html
@@ -5,7 +5,7 @@
              idfield="Code">
     <vr-datagridcolumn headertext="'Zone'" field="'ZoneName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Code'" field="'Code'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn fixedwidth="'35'">
+    <vr-datagridcolumn headertext="'Change Type'" invisibleheader fixedwidth="'35'">
         <vr-icon icontype="dataItem.CodeChangeTypeIconType" iconurl="dataItem.CodeChangeTypeIcon"
                  tooltip="dataItem.CodeChangeTypeIconTooltip" inline>
         </vr-icon>
