--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListChange/Templates/SalePriceListRateChangeTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListChange/Templates/SalePriceListRateChangeTemplate.html
@@ -6,12 +6,12 @@
     <vr-datagridcolumn headertext="'Zone'" field="'ZoneName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Rate'" field="'Rate'" type="'Number'" numberprecision="'LongPrecision'" fixedwidth="'70'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Currency'" field="'CurrencySymbol'" type="'Text'" fixedwidth="'70'"></vr-datagridcolumn>
-    <vr-datagridcolumn fixedwidth="'30'">
+    <vr-datagridcolumn fixedwidth="'30'" headertext="'Change Type'" invisibleheader>
         <vr-icon icontype="dataItem.RateChangeTypeIconType" iconurl="dataItem.RateChangeTypeIcon"
                  tooltip="dataItem.RateChangeTypeIconTooltip" inline>
         </vr-icon>
-    </vr-datagridcolumn>
-    <vr-datagridcolumn headertext="''" fixedwidth="'70'">
+    </vr-datagridcolumn>`
+    <vr-datagridcolumn headertext="'Service'" invisibleheader fixedwidth="'70'">
         <vr-whs-be-services-viewer on-ready="dataItem.onRPServiceViewerReady"></vr-whs-be-services-viewer>
     </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'BED'" type="'Date'"></vr-datagridcolumn>
