--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListChange/Templates/SalePriceListRoutingProductChangeTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListChange/Templates/SalePriceListRoutingProductChangeTemplate.html
@@ -5,11 +5,11 @@
              idfield="RoutingProductId">
     <vr-datagridcolumn headertext="'Zone'" field="'ZoneName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Routing Product'" field="'RoutingProductName'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="''" fixedwidth="'70'">
+    <vr-datagridcolumn headertext="'Service'" invisibleheader fixedwidth="'70'">
         <vr-whs-be-services-viewer on-ready="dataItem.onRPServiceViewerReady"></vr-whs-be-services-viewer>
     </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Recent Routing Product'" field="'RecentRoutingProductName'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="''" fixedwidth="'70'">
+    <vr-datagridcolumn headertext="'Recent Service'" invisibleheader fixedwidth="'70'">
         <vr-whs-be-services-viewer on-ready="dataItem.onRecentRPServiceViewerReady"></vr-whs-be-services-viewer>
     </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'BED'" type="'Date'"></vr-datagridcolumn>
