refactor vr-whs-be-sellingproduct-selector showaddbutton
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42078

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SellingProduct/SellingProductEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SellingProduct/SellingProductEditor.html
@@ -7,7 +7,7 @@
                         <vr-columns width="1/2row">
                             <vr-textbox value="scopeModal.name" label="Name" isrequired></vr-textbox>
                         </vr-columns>
-                        <span vr-disabled="scopeModal.isEditMode">
+                        <span vr-disabled="scopeModal.isEditMode || scopeModal.fixedSellingNumberPlanID">
                             <vr-whs-be-sellingnumberplan-selector normal-col-num="6" on-ready="scopeModal.onSellingNumberPlansDirectiveReady" isrequired="true">
                             </vr-whs-be-sellingnumberplan-selector>
                         </span>
