--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Web/WhS_CodePreparation/Views/CodePreparationManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Web/WhS_CodePreparation/Views/CodePreparationManagement.html
@@ -4,7 +4,7 @@
             <vr-row removeline>
                 <vr-validation-group validationcontext="SearchGroup">
                     <span vr-loader="isLoadingSellingNumberPlan">
-                        <vr-whs-be-sellingnumberplan-selector normal-col-num="2" isrequired="true" on-ready="onSellingNumberPlanSelectorReady" onselectionchanged="onSellingNumberPlanSelectorChanged" selectedvalues="selectedSellingNumberPlan"></vr-whs-be-sellingnumberplan-selector>
+                        <vr-whs-be-sellingnumberplan-selector normal-col-num="2" isrequired="true" on-ready="onSellingNumberPlanSelectorReady" onselectionchanged="onSellingNumberPlanSelectorChanged" selectedvalues="selectedSellingNumberPlan" showaddbutton></vr-whs-be-sellingnumberplan-selector>
                     </span>
                 </vr-validation-group>
             </vr-row>
