--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/SaleAreaSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/SaleAreaSettingsTemplate.html
@@ -22,13 +22,13 @@
                 <vr-columns width="1/2row">
                     <vr-common-mailmessagetemplate-selector on-ready="onPriceListEmailTemplateSelectorReady"
                                                             customlabel="Sale PriceList Email Template"
-                                                            isrequired="true">
+                                                            isrequired="true" showaddbutton>
                     </vr-common-mailmessagetemplate-selector>
                 </vr-columns>
                 <vr-whs-be-salepricelisttemplate-selector on-ready="ctrl.onSalePLTemplateSelectorReady"
                                                           normal-col-num="6"
                                                           isrequired="true"
-                                                          hideremoveicon="true">
+                                                          hideremoveicon="true" showaddbutton>
                 </vr-whs-be-salepricelisttemplate-selector>
                 <vr-columns width="1/2row">
                     <vr-textbox label="Effective Date Day Offset" type="number" value="ctrl.effectiveDateDayOffset" minvalue="0" isrequired="true"></vr-textbox>
