--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/City/CityEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/City/CityEditor.html
@@ -11,7 +11,7 @@
                     </vr-columns>
                 </span>
                 <vr-columns width="1/2row" vr-loader="isLoadingRegions" haschildcolumns>
-                    <vr-common-region-selector on-ready="onRegionDirectiveReady"></vr-common-region-selector>
+                    <vr-common-region-selector on-ready="onRegionDirectiveReady" showaddbutton></vr-common-region-selector>
                 </vr-columns>
             </vr-row>
         </vr-form>
