remove duplicate section
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42095

--- a/Vanrise/Code/Vanrise.Web/Client/Views/Documents.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Views/Documents.html
@@ -3,12 +3,7 @@
         <vr-row>
             <!--begin section to be repeated-->
             <vr-columns width="fullrow">
-                <a href="" ng-click="downloadDocument('/Documents/User_Guide.pdf')">CCT User Guid</a>
-            </vr-columns>
-            <!--end section to be repeated-->
-            <!--begin section to be repeated-->
-            <vr-columns width="fullrow">
-                <a href="" ng-click="downloadDocument('/Documents/User_Guide.pdf')">Supplier Rate Management User Guid</a>
+                <a href="" ng-click="downloadDocument('/Documents/User_Guide.pdf')">XBooster User Guid</a>
             </vr-columns>
             <!--end section to be repeated-->
         </vr-row>        
