fix english mistake
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42096

--- a/Vanrise/Code/Vanrise.Web/Client/Views/Documents.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Views/Documents.html
@@ -3,7 +3,7 @@
         <vr-row>
             <!--begin section to be repeated-->
             <vr-columns width="fullrow">
-                <a href="" ng-click="downloadDocument('/Documents/User_Guide.pdf')">XBooster User Guid</a>
+                <a href="" ng-click="downloadDocument('/Documents/User_Guide.pdf')">XBooster User Guide</a>
             </vr-columns>
             <!--end section to be repeated-->
         </vr-row>        
