Add Search Management for Generic Rule
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42111

--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/GenericRule/Templates/GenericRuleGridTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/GenericRule/Templates/GenericRuleGridTemplate.html
@@ -1,6 +1,6 @@
 ﻿<vr-datagrid datasource="genericRules"
              dataretrievalfunction="dataRetrievalFunction"
-             pagingtype="'PagingOnScroll'"
+             pagingtype="'Pager'"
              on-ready="onGridReady"
              menuactions="gridMenuActions"
              idfield="Entity.RuleId" enableautoexport="true">
@@ -11,6 +11,6 @@
     <vr-datagridcolumn headertext="'BED'" type="'LongDatetime'" field="'Entity.BeginEffectiveTime'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'EED'" type="'LongDatetime'" field="'Entity.EndEffectiveTime'"></vr-datagridcolumn>
     <vr-datagridexpandablerow>
-    <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
-</vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>  
