Adding validation serverside for teles actions
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42119

--- a/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/AccountAction/Provisioning/ProvisioningScreenedNumbers/Templates/ProvisionSiteDefinitionSettingsTemplate.html
+++ b/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/AccountAction/Provisioning/ProvisioningScreenedNumbers/Templates/ProvisionSiteDefinitionSettingsTemplate.html
@@ -3,6 +3,16 @@
     <vr-columns width="1/3row">
         <vr-textbox value="scopeModel.countryCode" label="Country Code" isrequired="true"></vr-textbox>
     </vr-columns>
+    <retail-be-accounttype-selector on-ready="scopeModel.onCompanyAccountTypeSelectorReady"
+                                    normal-col-num="4"
+                                    customlabel="Company Account Type"
+                                    isrequired="true">
+    </retail-be-accounttype-selector>
+    <retail-be-accounttype-selector on-ready="scopeModel.onSiteAccountTypeSelectorReady"
+                                    customlabel="Site Account Type"
+                                    normal-col-num="4"
+                                    isrequired="true">
+    </retail-be-accounttype-selector>
 </vr-row>
 <retail-teles-provisioner-provisionaccount-settings on-ready="scopeModel.onProvisionSiteSettingsReady"></retail-teles-provisioner-provisionaccount-settings>
 
