--- a/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Directives/MainExtensions/DID/Templates/DIDConvertorEditor.html
+++ b/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Directives/MainExtensions/DID/Templates/DIDConvertorEditor.html
@@ -24,3 +24,6 @@
 <vr-columns width="1/2row">
     <vr-textbox value="scopeModel.didSoColumn" label="DID SO Column" isrequired="true"></vr-textbox>
 </vr-columns>
+<vr-columns width="1/2row">
+    <vr-textbox value="scopeModel.NbOfChannelsColumn" label="Number of Channels Column" isrequired="true"></vr-textbox>
+</vr-columns>
