quick fix hint for Other Precision
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42128

--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/GeneralSettings/Templates/UITemplateSettings.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/GeneralSettings/Templates/UITemplateSettings.html
@@ -2,10 +2,10 @@
     <vr-row>
         <vr-sec-view-selector normal-col-num="6" on-ready="scopeModel.onViewSelectorReady" customlabel="Default View"></vr-sec-view-selector>
         <vr-columns width="1/2row">
-            <vr-textbox value="scopeModel.normalPrecision" label="Other Precision" type="number" minvalue="0" decimalprecision="0" isrequired="true"></vr-textbox>
+            <vr-textbox value="scopeModel.normalPrecision" label="Other Precision" type="number" minvalue="0" decimalprecision="0" isrequired="true" hint="Duration, Amount, KPI ..."></vr-textbox>
         </vr-columns>
         <vr-columns width="1/2row">
-            <vr-textbox value="scopeModel.longPrecision" label="Rate Precision" type="number" minvalue="0" decimalprecision="0" isrequired="true" hint="Duration, Amount, KPI ..."></vr-textbox>
+            <vr-textbox value="scopeModel.longPrecision" label="Rate Precision" type="number" minvalue="0" decimalprecision="0" isrequired="true"></vr-textbox>
         </vr-columns>
         <vr-common-pagesize-selector normal-col-num="6" on-ready="scopeModel.onPageSelectorReady" isrequired="true" ></vr-common-pagesize-selector>
     </vr-row>
