Implmeneitng invoice attachments for automatic invoice
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42156

--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceSetting/MainExtensions/Templates/AutomaticInvoiceSettingPartTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceSetting/MainExtensions/Templates/AutomaticInvoiceSettingPartTemplate.html
@@ -1,3 +1,10 @@
 ﻿<vr-columns colnum="{{ctrl.normalColNum}}">
     <vr-switch value="scopeModel.enableAutomaticInvoice" label="Enable Automatic Invoice" onvaluechanged="scopeModel.onEnableAutomaticInvoiceChanged"></vr-switch>
 </vr-columns>
+<vr-columns colnum="12">
+    <vr-section ng-repeat="action in scopeModel.actions" title="{{action.title}}">
+        <vr-directivewrapper directive="action.runtimeEditor" on-ready="action.onDirectiveReady"></vr-directivewrapper>
+    </vr-section>
+</vr-columns>
+
+
