--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/AutomaticInvoiceAction/MainExtensions/Templates/AutomaticSendEmailActionTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/AutomaticInvoiceAction/MainExtensions/Templates/AutomaticSendEmailActionTemplate.html
@@ -1,8 +1,14 @@
-﻿<vr-button type="Add" data-onclick="ctrl.addEmailAttachmentSet" standalone></vr-button>
-
-<vr-validator validate="ctrl.isValid()">
-    <vr-datagrid datasource="ctrl.datasource" norowhighlightonclick="true" menuactions="gridMenuActions" maxheight="300px"
-                 on-ready="onGridReady" enabledraggablerow="true" ondeleterow="    ctrl.removeEmailAttachmentSet" hidegridmenu>
-        <vr-datagridcolumn headertext="'Attachment Set Title'" field="'Entity.Name'" widthfactor="10" disablesorting></vr-datagridcolumn>
-    </vr-datagrid>
-</vr-validator>
+﻿<vr-columns width="1/2row">
+    <vr-common-mailmessagetype-selector on-ready="onMailMessageTypeSelectorReady" normal-col-num="6" isrequired="isMailMessageTypeRequired()"></vr-common-mailmessagetype-selector>
+</vr-columns>
+<vr-columns width="1/2row" withemptyline>
+    <vr-button type="Add" data-onclick="ctrl.addEmailAttachmentSet" standalone></vr-button>
+</vr-columns>
+<vr-columns width="fullrow">
+    <vr-validator validate="ctrl.isValid()">
+        <vr-datagrid datasource="ctrl.datasource" norowhighlightonclick="true" menuactions="gridMenuActions" maxheight="300px"
+                        on-ready="onGridReady" enabledraggablerow="true" ondeleterow="    ctrl.removeEmailAttachmentSet" hidegridmenu>
+            <vr-datagridcolumn headertext="'Attachment Set Title'" field="'Entity.Name'" widthfactor="10" disablesorting></vr-datagridcolumn>
+        </vr-datagrid>
+    </vr-validator>
+</vr-columns>
