--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/InvoiceActions/MainExtensions/SendEmail/Templates/SendEmailActionTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/InvoiceActions/MainExtensions/SendEmail/Templates/SendEmailActionTemplate.html
@@ -5,16 +5,7 @@
     <vr-columns width="1/2row">
         <vr-common-mailmessagetype-selector on-ready="onMainTypeSelectorReady"></vr-common-mailmessagetype-selector>
     </vr-columns>
-    <vr-columns width="fullrow">
-        <vr-button type="Add" data-onclick="ctrl.addEmailAttachment" standalone></vr-button>
-
-        <vr-validator validate="ctrl.isValid()">
-            <vr-datagrid datasource="ctrl.datasource" norowhighlightonclick="true" menuactions="gridMenuActions" maxheight="300px"
-                         on-ready="onGridReady" enabledraggablerow="true" ondeleterow="    ctrl.removeEmailAttachment" hidegridmenu>
-                <vr-datagridcolumn headertext="'Attachment Title'" field="'Entity.Title'" widthfactor="10" disablesorting></vr-datagridcolumn>
-            </vr-datagrid>
-        </vr-validator>
-    </vr-columns>
+    <vr-invoicetype-invoiceattachments-selector on-ready="onInvoiceAttachmentSelectorReady" normal-col-num="6" ismultipleselection></vr-invoicetype-invoiceattachments-selector>
 </vr-row>
 
 
