--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountEditor.html
@@ -29,7 +29,7 @@
                                 </vr-select>
                             </vr-columns>
                         </span>
-                        <vr-common-currency-selector on-ready="scopeModel.onCurrencySelectorReady" isrequired="true" normal-col-num="6"></vr-common-currency-selector>
+                        <vr-common-currency-selector on-ready="scopeModel.onCurrencySelectorReady" isrequired="true" normal-col-num="6" showaddbutton></vr-common-currency-selector>
                         <vr-common-company-setting-selector on-ready="scopeModel.onCompanySettingSelectorReady" normal-col-num="6"></vr-common-company-setting-selector>
 
                         <vr-columns width="1/2row">
@@ -67,7 +67,7 @@
                 <vr-tab header="'Customer Settings'" ng-if="scopeModel.showSellingNumberPlan">
                     <vr-row>
                         <span vr-loader="scopeModel.isLoadingCustomerTimeZoneSelector">
-                            <vr-common-timezone-selector on-ready="scopeModel.onCustomerTimeSelectorReady" normal-col-num="6"></vr-common-timezone-selector>
+                            <vr-common-timezone-selector on-ready="scopeModel.onCustomerTimeSelectorReady" normal-col-num="6" showaddbutton></vr-common-timezone-selector>
                         </span>
                         <vr-columns width="1/2row">
                             <vr-switch value="scopeModel.customerInvoiceTimeZone" label="Invoice Time Zone"></vr-switch>
@@ -78,14 +78,14 @@
                                                                   onselectionchanged="scopeModel.onSellingNumberPlanChanged"
                                                                   normal-col-num="6"
                                                                   isrequired="scopeModel.showSellingNumberPlan"
-                                                                  hideremoveicon>
+                                                                  hideremoveicon showaddbutton>
                             </vr-whs-be-sellingnumberplan-selector>
                         </span>
                         <span vr-disabled="scopeModel.isSellingProductSelectorDisabled" vr-loader="scopeModel.isLoadingSellingProductSelector">
                             <vr-whs-be-sellingproduct-selector on-ready="scopeModel.onSellingProductSelectorReady"
                                                                normal-col-num="6"
                                                                isrequired="true"
-                                                               hideremoveicon>
+                                                               hideremoveicon showaddbutton>
                             </vr-whs-be-sellingproduct-selector>
                         </span>
                         <span vr-loader="scopeModel.isLoadingCustomerRoutingStatusSelector">
@@ -108,7 +108,7 @@
                 <vr-tab header="'Supplier Settings'" ng-if="scopeModel.showZoneServiceConfig">
                     <vr-row>
                         <span vr-loader="scopeModel.isLoadingSupplierTimeZoneSelector">
-                            <vr-common-timezone-selector on-ready="scopeModel.onSupplierTimeSelectorReady" normal-col-num="6"></vr-common-timezone-selector>
+                            <vr-common-timezone-selector on-ready="scopeModel.onSupplierTimeSelectorReady" normal-col-num="6" showaddbutton></vr-common-timezone-selector>
                         </span>
                         <span ng-show="scopeModel.showZoneServiceConfig" vr-loader="scopeModel.isLoadingZoneServiceConfigSelector">
                             <vr-whs-be-zone-service-config-selector on-ready="scopeModel.onZoneServiceConfigSelectorReady"
