--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierProfileEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierProfileEditor.html
@@ -98,13 +98,13 @@
                 </vr-tab>
                 <vr-tab header="'Financial'">
                     <vr-row removeline>
-                        <vr-common-currency-selector on-ready="scopeModal.onCurrencySelectorReady" isrequired="true" normal-col-num="6"></vr-common-currency-selector>
+                        <vr-common-currency-selector on-ready="scopeModal.onCurrencySelectorReady" isrequired="true" normal-col-num="6" showaddbutton></vr-common-currency-selector>
                     </vr-row>
                     <vr-row removeline>
-                        <vr-common-timezone-selector on-ready="scopeModal.onDefaultCustomerTimeZoneSelectorReady" normal-col-num="6" label="Customer Time Zone" isrequired="true"></vr-common-timezone-selector>
+                        <vr-common-timezone-selector on-ready="scopeModal.onDefaultCustomerTimeZoneSelectorReady" normal-col-num="6" label="Customer Time Zone" isrequired="true" showaddbutton></vr-common-timezone-selector>
                     </vr-row>
                     <vr-row removeline>
-                        <vr-common-timezone-selector on-ready="scopeModal.onDefaultSupplierTimeZoneSelectorReady" normal-col-num="6" label="Supplier Time Zone" isrequired="true"></vr-common-timezone-selector>
+                        <vr-common-timezone-selector on-ready="scopeModal.onDefaultSupplierTimeZoneSelectorReady" normal-col-num="6" label="Supplier Time Zone" isrequired="true" showaddbutton></vr-common-timezone-selector>
                     </vr-row>
                     <vr-row removeline>
                         <vr-columns width="1/2row">
