--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/VolumeCommitment/Templates/VolumeCommitmentItemTierEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/VolumeCommitment/Templates/VolumeCommitmentItemTierEditor.html
@@ -31,8 +31,8 @@
                             <vr-button type="Add" data-onclick="scopeModel.addException" standalone vr-disabled="scopeModel.disabelAddException()"></vr-button>
                             <vr-datagrid datasource="scopeModel.exceptions" norowhighlightonclick="true" menuactions="scopeModel.exceptionGridMenuActions" maxheight="300px"
                                          on-ready="onGridReady" ondeleterow="scopeModel.removeException" hidegridmenu>
-                                <vr-datagridcolumn headertext="'Zones'" field="'ZoneNames'" widthfactor="7" disablesorting></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'Rate'" field="'Rate'" widthfactor="3" disablesorting type="'Number'" numberprecision="'LongPrecision'"></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'Zones'" field="'Entity.ZoneNames'" widthfactor="7" disablesorting></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'Rate'" field="'Entity.Rate'" widthfactor="3" disablesorting type="'Number'" numberprecision="'LongPrecision'"></vr-datagridcolumn>
                             </vr-datagrid>
                         </vr-columns>
                     </vr-row>
