--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Views/SwapDeal/SwapDealEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Views/SwapDeal/SwapDealEditor.html
@@ -48,7 +48,7 @@
                     </vr-row>
                     <vr-row>
                         <vr-columns width="fullrow">
-                            <vr-textbox label="Description" value="scopeModel.description" isrequired="true"></vr-textbox>
+                            <vr-textarea label="Description" value="scopeModel.description" isrequired="true"></vr-textarea>
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
