--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Views/VolumeCommitment/VolumeCommitmentEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Views/VolumeCommitment/VolumeCommitmentEditor.html
@@ -29,12 +29,12 @@
                             <vr-directivewrapper directive="scopeModel.selectedVolumeCommitmentType.carrierAccountSelector" selectedvalues="scopeModel.carrierAccount" hideremoveicon on-ready="scopeModel.onCarrierAccountSelectorReady" normal-col-num="4" isrequired="true" hideremoveicon="true" onselectionchanged="scopeModel.onCarrierAccountSelectionChanged"></vr-directivewrapper>
                         </span>
                         <vr-common-currency-selector on-ready="scopeModel.onCurrencySelectReady" isrequired="true" normal-col-num="4"></vr-common-currency-selector>
-                        <vr-columns width="1/3row">
+                        <!--<vr-columns width="1/3row">
                             <vr-switch value="scopeModel.active" label="Active">  </vr-switch>
-                        </vr-columns>
+                        </vr-columns>-->
                     </vr-row>
                     <vr-row>
-                        <vr-columns width="2/3row">
+                        <vr-columns width="fullrow">
                             <vr-textarea label="Description" value="scopeModel.description" isrequired="true"></vr-textarea>
                         </vr-columns>
                     </vr-row>
