--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/InvoiceActions/MainExtensions/Templates/OpenRDLCReportActionTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/InvoiceActions/MainExtensions/Templates/OpenRDLCReportActionTemplate.html
@@ -2,6 +2,9 @@
     <vr-columns width="1/2row">
         <vr-textbox value="scopeModel.reportURL" label="Report URL" isrequired="true"></vr-textbox>
     </vr-columns>
+    <vr-columns width="1/2row">
+        <vr-textbox value="scopeModel.reportRuntimeURL" label="Report Runtime URL" isrequired="true"></vr-textbox>
+    </vr-columns>
     <vr-columns width="fullrow">
         <vr-section title="Main Report Settings">
             <vr-tabs>
