--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/TQIMethods/Templates/SuggestedAverageTQIMethodTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/TQIMethods/Templates/SuggestedAverageTQIMethodTemplate.html
@@ -6,7 +6,7 @@
                      pagingtype="'PagingOnScroll'"
                      defaultsortbyfieldname="'SupplierName'">
             <vr-datagridcolumn headertext="'Supplier'" field="'SupplierName'" type="'Text'" widthfactor="50" disablesorting="true"></vr-datagridcolumn>
-            <vr-datagridcolumn headertext="'Rate'" field="'ConvertedSupplierRate'" type="'Text'" widthfactor="50" disablesorting="true"></vr-datagridcolumn>
+            <vr-datagridcolumn headertext="'Rate'" field="'ConvertedSupplierRate'" type="'Number'" numberprecision="'LongPrecision'" widthfactor="50" disablesorting="true"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'%'" widthfactor="20" disablesorting="true">
                 <vr-textbox type="number" minvalue="0" value="dataItem.marginPercentageValue"> </vr-textbox>
             </vr-datagridcolumn>
