deal evaluator enhancement
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42210

--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/SwapDeal/Templates/SwapDealGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/SwapDeal/Templates/SwapDealGridTemplate.html
@@ -4,6 +4,7 @@
              menuactions="scopeModel.menuActions"
              pagingtype="'PagingOnScroll'"
              idfield="Entity.DealId" enableautoexport="true">
+    <vr-datagridcolumn headertext="'ID'" field="'Entity.DealId'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Description'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Carrier'" field="'CarrierAccountName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'Entity.Settings.BeginDate'" type="'Date'"></vr-datagridcolumn>
