--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/Settings/DealSettings/Templates/DealTechnicalSettingsEditorTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/Settings/DealSettings/Templates/DealTechnicalSettingsEditorTemplate.html
@@ -6,7 +6,7 @@
     <reprocess-chunktime-selector on-ready="scopeModel.onChunkTimeSelectorReady" isrequired="true" normal-col-num="4"></reprocess-chunktime-selector>
 
     <vr-columns colnum="4">
-        <vr-textbox value="scopeModel.intervalOffset" label="Interval Offset" type="number" minvalue="1" decimalprecision="0"></vr-textbox>
+        <vr-textbox value="scopeModel.intervalOffsetInMinutes" label="Interval Offset (Min)" type="number" minvalue="1" decimalprecision="0"></vr-textbox>
     </vr-columns>
 </vr-row>
 
