--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListChange/Templates/SalePriceListRateChangeTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListChange/Templates/SalePriceListRateChangeTemplate.html
@@ -10,7 +10,7 @@
         <vr-icon icontype="dataItem.RateChangeTypeIconType" iconurl="dataItem.RateChangeTypeIcon"
                  tooltip="dataItem.RateChangeTypeIconTooltip" inline>
         </vr-icon>
-    </vr-datagridcolumn>`
+    </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Service'" invisibleheader fixedwidth="'70'">
         <vr-whs-be-services-viewer on-ready="dataItem.onRPServiceViewerReady"></vr-whs-be-services-viewer>
     </vr-datagridcolumn>
