--- a/Vanrise/Code/Vanrise.BEBridge.Web/VR_BEBridge/Directives/BEReceiveDefinition/SourceBEReaders/Templates/BEReceiveDefinitionSqlSourceReadersTemplate.html
+++ b/Vanrise/Code/Vanrise.BEBridge.Web/VR_BEBridge/Directives/BEReceiveDefinition/SourceBEReaders/Templates/BEReceiveDefinitionSqlSourceReadersTemplate.html
@@ -6,10 +6,13 @@
     <vr-columns width="1/3row">
         <vr-textbox value="scopeModel.timeoutInSec" label="Command Timeout (sec)" isrequired="true" decimalprecision="0" minvalue="1" />
     </vr-columns>
-    <vr-columns width="1/3row">
+    <vr-columns width="1/6row">
+        <vr-switch value="scopeModel.useDataSet" label="Use Dataset"></vr-switch>
+    </vr-columns>
+    <vr-columns width="1/6row">
         <vr-switch value="scopeModel.basedOnId" label="Based on Id"></vr-switch>
     </vr-columns>
-    <vr-columns width="1/3row" ng-if="scopeModel.basedOnId">
+    <vr-columns width="1/4row" ng-if="scopeModel.basedOnId">
         <vr-textbox value="scopeModel.idField" label="Id Field" isrequired="true" />
     </vr-columns>
 </vr-row>
