--- a/Retail/Code/Retail.Cost.Web/Retail_Cost/Settings/Directives/Templates/CDRCostTechnicalSettingsEditorTemplate.html
+++ b/Retail/Code/Retail.Cost.Web/Retail_Cost/Settings/Directives/Templates/CDRCostTechnicalSettingsEditorTemplate.html
@@ -3,6 +3,9 @@
         <vr-columns width="1/2row">
             <reprocess-reprocessdefinition-selector on-ready="scopeModel.onReprocessDefinitionSelectorReady" isrequired="true"></reprocess-reprocessdefinition-selector>
         </vr-columns>
+
+        <reprocess-chunktime-selector on-ready="scopeModel.onChunkTimeSelectorReady" isrequired="true" normal-col-num="6"></reprocess-chunktime-selector>
+
         <vr-columns width="1/2row">
             <vr-genericdata-datarecordtype-selector on-ready="scopeModel.onDataRecordTypeSelectorReady"
                                                     selectedvalues="scopeModel.selectedDataRecordType"
@@ -10,6 +13,7 @@
                                                     isrequired="true" label="Record Type" hideremoveicon>
             </vr-genericdata-datarecordtype-selector>
         </vr-columns>
+
         <vr-columns width="fullrow">
             <span ng-show="scopeModel.showRecordFilterDirective" vr-loader="scopeModel.isRecordFilterDirectiveLoading">
                 <vr-section title="Advanced Filter" collapsible>
